[gd_scene load_steps=7 format=3 uid="uid://55asonx0hhw2"]

[ext_resource type="Texture2D" uid="uid://ce5n365g6khja" path="res://Art/16x16 Pixel Art Roguelike (Village) Pack/Enemies/Villagers/villagers_window_base.png" id="1_4c6th"]
[ext_resource type="Script" path="res://Rooms/Furniture and Traps/traps/window_villagers/window_villager.gd" id="1_fyecw"]

[sub_resource type="Animation" id="Animation_hwreo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_7lmwm"]
resource_name = "throw"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.5, 0.55, 0.8, 0.85, 0.9, 0.95, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 6, 7, 8, 9, 10]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_throw"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3mund"]
_data = {
"RESET": SubResource("Animation_hwreo"),
"throw": SubResource("Animation_7lmwm")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_glinj"]
radius = 2.0

[node name="WindowVillager" type="Sprite2D"]
z_index = 1
texture = ExtResource("1_4c6th")
hframes = 11
vframes = 9
script = ExtResource("1_fyecw")
row = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3mund")
}

[node name="ThrowPosition" type="Marker2D" parent="."]
position = Vector2(5, 3)

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 2.35833
one_shot = true

[node name="HouseShapeDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HouseShapeDetector"]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_glinj")
